# copilot-sdk-supercharged

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MULTI_LANGUAGE_SDKS.md  Package.swift  README.md  SECURITY.md  index.html  justfile
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml  lsp.json
ada/: .gitignore  README.md  alire.toml  copilot_sdk.gpr
c/: CMakeLists.txt  README.md
c/cookbook/: README.md  advanced-features.md  error-handling.md  multiple-sessions.md  persisting-sessions.md  tools-and-skills.md
c/e2e/: CMakeLists.txt  e2e_session_test.c  test_harness.c  test_harness.h
c/examples/: basic_example.c
c/include/copilot/: copilot.h  sdk_protocol_version.h
c/src/: client.c  json_rpc_client.c  json_rpc_client.h  session.c
clojure/: README.md  build.clj  deps.edn
cobol/: Makefile  README.md
cpp/: CMakeLists.txt  README.md
cpp/cookbook/: README.md  advanced-features.md  error-handling.md  multiple-sessions.md  persisting-sessions.md  tools-and-skills.md
cpp/e2e/: CMakeLists.txt  e2e_session_test.cpp  test_harness.cpp  test_harness.h
cpp/examples/: basic_example.cpp
cpp/include/copilot/: client.h  json_rpc_client.h  sdk_protocol_version.h  session.h  types.h
cpp/src/: client.cpp  json_rpc_client.cpp  session.cpp
crystal/: README.md  shard.yml
dart/: CHANGELOG.md  README.md  dart_test.yaml  pubspec.yaml
delphi/: README.md  boss.json
dlang/: README.md  dub.json
docs/: compatibility.md  debugging.md  getting-started.md  index.md
dotnet/: .gitignore  Directory.Packages.props  GitHub.Copilot.SDK.slnx  README.md
fortran/: CMakeLists.txt  README.md  fpm.toml
fortran/cookbook/: README.md  advanced-features.md  error-handling.md  multiple-sessions.md  persisting-sessions.md  tools-and-skills.md
fortran/e2e/: CMakeLists.txt  test_e2e.f90  test_harness.f90
fortran/examples/: basic_example.f90
fortran/src/: copilot_client.f90  copilot_jsonrpc.f90  copilot_session.f90  copilot_tools.f90  copilot_types.f90  copilot_version.f90
fortran/tests/: test_client.f90
go/: go.mod  (+17 more)
haskell/: README.md  copilot-sdk-supercharged.cabal  copilot-sdk.cabal
haskell/app/: BasicExample.hs
haskell/cookbook/: README.md  advanced-features.md  error-handling.md  multiple-sessions.md  persisting-sessions.md  tools-and-skills.md
haskell/e2e/: E2ESpec.hs
haskell/e2e/CopilotE2E/: TestHarness.hs
haskell/src/Copilot/: Client.hs  DefineTool.hs  JsonRpc.hs  SdkProtocolVersion.hs  Session.hs  Types.hs
ocaml/: README.md  copilot-sdk-supercharged.opam  dune-project
ocaml/cookbook/: README.md  custom_tools.ml  error_handling.ml  model_selection.ml  multi_turn.ml  permission_handling.ml  streaming.ml
ocaml/e2e/: dune  test_e2e.ml  test_harness.ml
ocaml/examples/: basic_example.ml
ocaml/lib/: client.ml  client.mli  dune  jsonrpc.ml  jsonrpc.mli  session.ml  session.mli  tools.ml  types.ml  types.mli  version.ml
ocaml/test/: dune  test_client.ml
python/: .gitignore  README.md  pyproject.toml  test_client.py  test_commands_and_elicitation.py  test_jsonrpc.py  test_rpc_generated.py  test_telemetry.py  test_tools.py
python/copilot/: __init__.py  _diagnostics.py  _jsonrpc.py  client.py  session.py  session_fs_provider.py  tools.py  types.py
python/e2e/: conftest.py  test_abort_e2e.py  test_agent_and_compact_rpc_e2e.py  test_ask_user.py  test_builtin_tools_e2e.py  test_client.py  test_client_api_e2e.py  test_client_e2e.py  test_client_lifecycle_e2e.py  test_client_options_e2e.py  test_commands.py  test_commands_e2e.py  test_compaction_e2e.py  test_connection_token.py  test_error_resilience_e2e.py  test_event_fidelity_e2e.py  test_hooks_e2e.py  test_hooks_extended_e2e.py  test_mcp_and_agents.py  test_mcp_and_agents_e2e.py  test_mode_handlers_e2e.py  test_multi_client.py  test_multi_client_e2e.py  test_multi_turn_e2e.py  test_pending_work_resume_e2e.py  test_per_session_auth_e2e.py  test_permissions_e2e.py  test_rpc_e2e.py  test_rpc_event_side_effects_e2e.py  test_rpc_mcp_and_skills_e2e.py  test_rpc_mcp_config_e2e.py  test_rpc_server_e2e.py  test_rpc_session_state_e2e.py  test_rpc_shell_and_fleet_e2e.py  test_rpc_tasks_and_handlers_e2e.py  test_session.py  test_session_config.py  test_session_config_e2e.py  test_session_e2e.py  test_session_fs.py  (+13 more)
python/e2e/testharness/: context.py  proxy.py
python/samples/: chat.py
python/scripts/: build-wheels.mjs
rust/: .gitignore  .rustfmt.nightly.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.rs  clippy.toml  release-plz.toml  rust-toolchain.toml
rust/cookbook/: README.md  advanced-features.md  error-handling.md  multiple-sessions.md  persisting-sessions.md  tools-and-skills.md
rust/examples/: basic_example.rs  chat.rs  hooks.rs  lifecycle_observer.rs  session_fs.rs  tool_server.rs
rust/src/: client.rs  embeddedcli.rs  handler.rs  hooks.rs  jsonrpc.rs  lib.rs  permission.rs  resolve.rs  router.rs  sdk_protocol_version.rs  session.rs  session_fs.rs  session_fs_dispatch.rs  subscription.rs  tool.rs  trace_context.rs  transforms.rs  types.rs
rust/tests/: api_types_test.rs  e2e.rs  e2e_tests.rs  integration_test.rs  jsonrpc_test.rs  protocol_version_test.rs  session_test.rs
rust/tests/e2e/: abort.rs  ask_user.rs  builtin_tools.rs  client.rs  client_api.rs  client_lifecycle.rs  client_options.rs  commands.rs  compaction.rs  elicitation.rs  error_resilience.rs  event_fidelity.rs  hooks.rs  hooks_extended.rs  mcp_and_agents.rs  mod.rs  mode_handlers.rs  multi_client.rs  multi_client_commands_elicitation.rs  multi_turn.rs  pending_work_resume.rs  per_session_auth.rs  permissions.rs  rpc_additional_edge_cases.rs  rpc_agent.rs  rpc_event_side_effects.rs  rpc_mcp_and_skills.rs  rpc_mcp_config.rs  rpc_server.rs  rpc_session_state.rs  rpc_shell_and_fleet.rs  rpc_shell_edge_cases.rs  rpc_tasks_and_handlers.rs  session.rs  session_config.rs  session_lifecycle.rs  session_tests.rs  skills.rs  streaming_fidelity.rs  support.rs  (+6 more)
test/scenarios/tools/custom-agents/rust/: Cargo.toml
test/scenarios/tools/custom-agents/rust/src/: main.rs
(+1696 files in other folders)
