[build-system]
requires = ["setuptools>=82.0.1", "wheel", "setuptools_scm[toml]>=10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-sdk-supercharged"
version = "2.0.0"
description = "GitHub Copilot SDK Supercharged - Python SDK for programmatic control of GitHub Copilot CLI. Supports 40 languages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
# license-files is set by scripts/build-wheels.mjs for bundled CLI wheels
authors = [
    {name = "jeremiahjordanisaacson"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "pydantic>=2.13.3",
]

[project.urls]
Homepage = "https://github.com/jeremiahjordanisaacson/copilot-sdk-supercharged"
Repository = "https://github.com/jeremiahjordanisaacson/copilot-sdk-supercharged"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.33,<0.0.34",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
]
telemetry = [
    "opentelemetry-api>=1.41.1",
]

# Use find with a glob so that the copilot.bin subpackage (created dynamically
# by scripts/build-wheels.mjs during publishing) is included in platform wheels.
[tool.setuptools.packages.find]
where = ["."]
include = ["copilot*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "generated",
    "copilot/generated",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
invalid-argument-type = "warn"

[tool.ty.src]
exclude = [
    "generated",
    "copilot/generated",
    "copilot/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
