[package]
name = "copilot-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft Corporation"]
description = "Rust SDK for programmatic control of GitHub Copilot CLI via JSON-RPC 2.0"
license = "MIT"
repository = "https://github.com/github/copilot-sdk"
keywords = ["copilot", "github", "sdk", "json-rpc", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
