[package]
name = "copilot-sdk-supercharged"
version = "2.0.0"
edition = "2021"
authors = ["Jeremiah Isaacson"]
description = "Rust SDK for programmatic control of GitHub Copilot CLI via JSON-RPC 2.0"
license = "MIT"
repository = "https://github.com/jeremiahjordanisaacson/copilot-sdk-supercharged"
keywords = ["copilot", "github", "sdk", "json-rpc", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
tempfile = "3"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
