[package]
name = "custom-agents-rust"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
github-copilot-sdk = { path = "../../../../../rust", features = ["derive"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
